[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/actors/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/assets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://src/objects/caixa.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/level02.gd" type="Script" id=4]
[ext_resource path="res://src/objects/portal/portal.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/music/Chillix.mp3" type="AudioStream" id=6]
[ext_resource path="res://src/actors/professoraAna/ProfessoraAna.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/objects/caixabe.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/objects/caixabd.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/objects/sounds/confirmation_002.ogg" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 108.5, 66.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90.5, 56.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 83.5, 52.5 )

[node name="Level02" type="Node2D"]
script = ExtResource( 4 )

[node name="Portal3" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 1812, 1453 )
monitoring = false
path_to_scene = "res://src/levels/level03.tscn"

[node name="coracao" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="coracao"]
margin_left = 1487.0
margin_top = 1777.0
margin_right = 1705.0
margin_bottom = 1925.0
color = Color( 0.701961, 0.309804, 0.0980392, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="coracao"]
position = Vector2( 1597, 1846 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 1.5, 1.5 )
z_as_relative = false
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 7, 1610612736, 0, 8, 1610612736, 0, 9, 1610612736, 0, 10, 1610612736, 0, 11, 1610612736, 0, 12, 1610612736, 0, 13, 1610612736, 0, 14, 1610612736, 0, 15, 1610612736, 0, 16, 1610612736, 0, 17, 1610612736, 0, 18, 1610612736, 0, 19, 1610612736, 0, 20, 1610612736, 0, 65543, 1610612736, 0, 65544, 1610612736, 0, 65555, 1610612736, 0, 65556, 1610612736, 0, 131079, 1610612736, 0, 131092, 1610612736, 0, 196615, 1610612736, 0, 196618, 1610612736, 0, 196620, 1610612736, 0, 196623, 1610612736, 0, 196625, 1610612736, 0, 196628, 1610612736, 0, 262151, 1610612736, 0, 262154, 1610612736, 0, 262156, 1610612736, 0, 262159, 1610612736, 0, 262161, 1610612736, 0, 262164, 1610612736, 0, 327687, 1610612736, 0, 327690, 1610612736, 0, 327691, 1610612736, 0, 327692, 1610612736, 0, 327695, 1610612736, 0, 327696, 1610612736, 0, 327697, 1610612736, 0, 327700, 1610612736, 0, 393223, 1610612736, 0, 393236, 1610612736, 0, 458759, 1610612736, 0, 458762, 1610612736, 0, 458763, 1610612736, 0, 458764, 1610612736, 0, 458765, 1610612736, 0, 458766, 1610612736, 0, 458767, 1610612736, 0, 458768, 1610612736, 0, 458769, 1610612736, 0, 458772, 1610612736, 0, 524295, 1610612736, 0, 524298, 1610612736, 0, 524305, 1610612736, 0, 524308, 1610612736, 0, 589831, 1610612736, 0, 589834, 1610612736, 0, 589841, 1610612736, 0, 589844, 1610612736, 0, 655367, 1610612736, 0, 655370, 1610612736, 0, 655377, 1610612736, 0, 655380, 1610612736, 0, 720903, 1610612736, 0, 720904, 1610612736, 0, 720905, 1610612736, 0, 720906, 1610612736, 0, 720907, 1610612736, 0, 720912, 1610612736, 0, 720913, 1610612736, 0, 720914, 1610612736, 0, 720915, 1610612736, 0, 720916, 1610612736, 0, 786433, 1610612736, 0, 786434, 1610612736, 0, 786435, 1610612736, 0, 786436, 1610612736, 0, 786437, 1610612736, 0, 786438, 1610612736, 0, 786439, 1610612736, 0, 786452, 1610612736, 0, 786453, 1610612736, 0, 786454, 1610612736, 0, 786455, 1610612736, 0, 786456, 1610612736, 0, 786457, 1610612736, 0, 786458, 1610612736, 0, 786459, 1610612736, 0, 851969, 1610612736, 0, 851995, 1610612736, 0, 917505, 1610612736, 0, 917531, 1610612736, 0, 983041, 1610612736, 0, 983067, 1610612736, 0, 1048577, 1610612736, 0, 1048589, 0, 0, 1048590, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048603, 1610612736, 0, 1114113, 1610612736, 0, 1114125, 0, 0, 1114131, 0, 0, 1114139, 1610612736, 0, 1179649, 1610612736, 0, 1179653, 1610612736, 0, 1179654, 1610612736, 0, 1179661, 0, 0, 1179667, 0, 0, 1179675, 1610612736, 0, 1245185, 1610612736, 0, 1245189, 1610612736, 0, 1245190, 1610612736, 0, 1245198, 0, 0, 1245202, 0, 0, 1245207, 1610612736, 0, 1245211, 1610612736, 0, 1310721, 1610612736, 0, 1310725, 1610612736, 0, 1310726, 1610612736, 0, 1310735, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310743, 1610612736, 0, 1310747, 1610612736, 0, 1376257, 1610612736, 0, 1376261, 1610612736, 0, 1376262, 1610612736, 0, 1376279, 1610612736, 0, 1376283, 1610612736, 0, 1441793, 1610612736, 0, 1441797, 1610612736, 0, 1441798, 1610612736, 0, 1441815, 1610612736, 0, 1441819, 1610612736, 0, 1507329, 1610612736, 0, 1507333, 1610612736, 0, 1507334, 1610612736, 0, 1507351, 1610612736, 0, 1507355, 1610612736, 0, 1572865, 1610612736, 0, 1572869, 1610612736, 0, 1572870, 1610612736, 0, 1572887, 1610612736, 0, 1572891, 1610612736, 0, 1638401, 1610612736, 0, 1638405, 1610612736, 0, 1638406, 1610612736, 0, 1638423, 1610612736, 0, 1638427, 1610612736, 0, 1703937, 1610612736, 0, 1703941, 1610612736, 0, 1703942, 1610612736, 0, 1703959, 1610612736, 0, 1703963, 1610612736, 0, 1769473, 1610612736, 0, 1769477, 1610612736, 0, 1769478, 1610612736, 0, 1769495, 1610612736, 0, 1769499, 1610612736, 0, 1835009, 1610612736, 0, 1835013, 1610612736, 0, 1835014, 1610612736, 0, 1835031, 1610612736, 0, 1835035, 1610612736, 0, 1900544, 1610612736, 0, 1900545, 0, 0, 1900549, 1610612736, 0, 1900550, 1610612736, 0, 1900566, 1610612736, 0, 1900567, 0, 0, 1900571, 1610612736, 0, 1900572, 0, 0, 1900573, 0, 0, 1966080, 1610612736, 0, 1966086, 1610612736, 0, 1966101, 1610612736, 0, 1966109, 0, 0, 2031616, 1610612736, 0, 2031618, 1610612736, 0, 2031619, 1610612736, 0, 2031620, 1610612736, 0, 2031622, 1610612736, 0, 2031637, 1610612736, 0, 2031640, 1610612736, 0, 2031641, 1610612736, 0, 2031642, 0, 0, 2031645, 0, 0, 2097152, 1610612736, 0, 2097153, 1610612736, 0, 2097154, 1610612736, 0, 2097156, 1610612736, 0, 2097157, 1610612736, 0, 2097158, 1610612736, 0, 2097173, 1610612736, 0, 2097174, 1610612736, 0, 2097175, 1610612736, 0, 2097176, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2162694, 1610612736, 0, 2162699, 1610612736, 0, 2162700, 1610612736, 0, 2162701, 1610612736, 0, 2162702, 1610612736, 0, 2162703, 1610612736, 0, 2162704, 0, 0, 2162709, 1610612736, 0, 2228230, 0, 0, 2228235, 1610612736, 0, 2228240, 0, 0, 2228245, 0, 0, 2293766, 0, 0, 2293771, 1610612736, 0, 2293776, 0, 0, 2293781, 0, 0, 2359302, 0, 0, 2359307, 1610612736, 0, 2359312, 0, 0, 2359317, 0, 0, 2424835, 0, 0, 2424836, 0, 0, 2424837, 0, 0, 2424838, 1610612736, 0, 2424843, 1610612736, 0, 2424844, 1610612736, 0, 2424845, 1610612736, 0, 2424846, 1610612736, 0, 2424847, 1610612736, 0, 2424848, 0, 0, 2424853, 0, 0, 2424854, 0, 0, 2424855, 0, 0, 2490371, 0, 0, 2490381, 1610612736, 0, 2490391, 0, 0, 2555907, 0, 0, 2555917, 1610612736, 0, 2555927, 0, 0, 2621443, 0, 0, 2621453, 1610612736, 0, 2621463, 0, 0, 2686979, 0, 0, 2686980, 0, 0, 2686981, 0, 0, 2686982, 1610612736, 0, 2686983, 1610612736, 0, 2686984, 1610612736, 0, 2686985, 1610612736, 0, 2686986, 1610612736, 0, 2686987, 1610612736, 0, 2686988, 1610612736, 0, 2686989, 1610612736, 0, 2686990, 1610612736, 0, 2686991, 1610612736, 0, 2686992, 1610612736, 0, 2686993, 1610612736, 0, 2686994, 1610612736, 0, 2686995, 1610612736, 0, 2686996, 1610612736, 0, 2686997, 1610612736, 0, 2686998, 0, 0, 2686999, 0, 0 )

[node name="Itens" type="Node2D" parent="."]

[node name="caixapreta" parent="Itens" instance=ExtResource( 3 )]
position = Vector2( 1281, 2506 )
mode = 2
mass = 30.0

[node name="caixabe" parent="Itens" groups=["bodies"] instance=ExtResource( 8 )]
position = Vector2( 1026, 2504 )
mode = 2
mass = 30.0
gravity_scale = 0.0

[node name="caixabd" parent="Itens" groups=["bodies"] instance=ExtResource( 9 )]
position = Vector2( 1552, 2489 )
mode = 2
mass = 30.0
gravity_scale = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -5.0
autoplay = true

[node name="ProfessoraAna" parent="." instance=ExtResource( 7 )]
position = Vector2( 1394, 3103 )

[node name="bracoesquerdo" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="bracoesquerdo"]
margin_left = 266.0
margin_top = 2858.0
margin_right = 445.0
margin_bottom = 2972.0
color = Color( 0.384314, 0.0352941, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="bracoesquerdo"]
position = Vector2( 358.5, 2915.5 )
shape = SubResource( 2 )

[node name="bracodireito" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="bracodireito"]
margin_left = 2389.0
margin_top = 2843.0
margin_right = 2563.0
margin_bottom = 2956.0
color = Color( 0.223529, 0.647059, 0.360784, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bracodireito"]
position = Vector2( 2471.5, 2898.5 )
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1169, 3133 )

[node name="AudioConfirmed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="body_entered" from="coracao" to="." method="_on_coracao_body_entered"]
[connection signal="body_entered" from="bracoesquerdo" to="." method="_on_bracoesquerdo_body_entered"]
[connection signal="body_entered" from="bracodireito" to="." method="_on_bracodireito_body_entered"]
